# my-llm

./: .gitignore  README.md  pyproject.toml
checkpoints-test/: tokenizer.json  tokenizer.py
cnnTest/: README.md  pyproject.toml  serve.ps1
cnnTest/cnntest/: paths.py  server.py  train.py
cnnTest/cnntest/data/: __init__.py  samples.py
cnnTest/cnntest/models/: __init__.py  simple_cnn.py
cnnTest/scripts/: test_model.py
console/: README.md  index.html  package-lock.json  package.json  type.ts  vite.config.js
console/src/: App.vue  api.js  style.css  symbols.js
docs/: 任务记录.md
melody-console/: index.html  package-lock.json  package.json  vite.config.js
melody-console/src/: App.vue  jPlayerPlay.js  style.css  utils.js
melody-console2/: package-lock.json  package.json  vite.config.js
melody-console2/src/: App.vue  style.css
melody-model/: README.md  index.ts  package-lock.json  package.json  training-data.json  tsconfig.json  type.d.ts  type.ts
melody-model/doc/: agentDoc.md  midi对照.md  权重算法.md  重构算法规则.md
melody-model/lib/: Untitled  constants.ts  generationState.ts  generator.ts  logger.ts  melodyLine.ts  (+13 more)
melody-model2/: index.ts  package.json  training-data.json  type.ts
model/: README.md  enum.ts  index.ts  package-lock.json  package.json
my-llm-test/: model.py  train.py
my_llm_test/: __init__.py  model.py  train.py
myllm/: __init__.py  chat.py  config.py  data.py  generate.py  model.py  server.py  train.py
switch_transformer_test/: __init__.py  model.py  train.py
translate_llm_test/: __init__.py  model.py  tokenizer.py  train.py
(+37 files in other folders)
