[project]
name = "cnntest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
train = "cnntest.train:main"
serve = "cnntest.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cnntest*"]
